k8s/backend/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout

metadata:
  name: ecommerce
  namespace: ecommerce

spec:
  replicas: 2

  revisionHistoryLimit: 5

  selector:
    matchLabels:
      app: ecommerce

  template:
    metadata:
      labels:
        app: ecommerce

    spec:
      containers:
      - name: ecommerce

        image: REPLACE_IMAGE

        imagePullPolicy: Always

        ports:
        - containerPort: 3006

        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"

          limits:
            cpu: "500m"
            memory: "512Mi"

  strategy:
    blueGreen:

      activeService: ecommerce-active

      previewService: ecommerce-preview

      autoPromotionEnabled: false

      previewReplicaCount: 2

      scaleDownDelaySeconds: 30
