k8s/backend/preview-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: ecommerce-preview

  namespace: ecommerce

spec:

  selector:
    app: ecommerce

  ports:
  - port: 80
    targetPort: 3006

  type: ClusterIP
