k8s/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ecommerce-ingress

  namespace: ecommerce

  annotations:

    kubernetes.io/ingress.class: alb

    alb.ingress.kubernetes.io/scheme: internet-facing

    alb.ingress.kubernetes.io/target-type: ip

spec:

  ingressClassName: alb

  rules:

  - host: ecommerce.example.com

    http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: ecommerce-active

            port:

              number: 80
